# Rehearse

./: download_dependencies_devel.sh  remove_dependencies.sh
src/: CMakeLists.txt  FindCOINOR.cmake
